# chrome-bridge

./: .gitignore  AGENTS.md  HISTORY.md  NEXT_TASK.md  PRIVACY.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: chrome-web-store-status.yml  ci.yml  release-pypi.yml
apps/extension/: THIRD_PARTY_NOTICES.md  background.js  build.mjs  connection-probe.js  connection-ui.js  debugger-session.js  download.js  eslint.config.js  extension-files.json  identity.js  manifest.json  media-sizing.js  options.html  options.js  package-lock.json  package.json  playwright.config.js  playwright.e2e.config.js  popup.html  popup.js  recording-offscreen.html  recording-offscreen.js  recording.js  runtime-config.js  styles.css
apps/extension/e2e/: harness.js  multiple-profiles.spec.js
apps/extension/src/: agent-ui.ts  content-runtime.ts  image.ts  interaction.ts  protocol.ts  snapshot.ts
apps/extension/tests/: connection-probe.spec.js  connection-ui.spec.js  debugger-session.spec.js  download.spec.js  harness.ts  identity.spec.js  (+4 more)
apps/server/: README.md  pyproject.toml
docs/: api.md  architecture.md  chrome-web-store.md  development.md  isolated-chrome-e2e.md  multiple-browser-routing.md  operations.md  release.md  video-recording.md
examples/recording-demo/: .gitignore  README.md  complete.html  demo.js  index.html  join_recordings.py  record_journey.py  signup.html  styles.css
scripts/: build_release.py  check_release_reproducible.py  chrome_web_store.py  prepare_unpacked_extension.py  validate_release.py  validate_static.py
scripts/tests/: test_chrome_web_store.py
(+19 files in other folders)
