[project]
name = "chrome-bridge-workspace"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = ["chrome-bridge-mcp", "chrome-bridge-sdk"]

[dependency-groups]
dev = [
    "httpx2>=2,<3",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
    "ruff>=0.12,<1",
]

[tool.uv]
package = false

[tool.uv.sources]
chrome-bridge-mcp = { workspace = true }
chrome-bridge-sdk = { workspace = true }

[tool.uv.workspace]
members = ["packages/mcp", "packages/sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["packages/mcp/tests", "scripts/tests"]
